# Groq-coding-agent

./: README.md  call_function.py  config.py  main.py  prompts.py  pyproject.toml  test_get_files_info.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
tests/: test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py
