[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argcomplete>=3.5.0",
    "groq>=0.4.1",
    "python-dotenv>=1.0.0",
    "yaspin>=3.0.0",
]
[project.scripts]
coding-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]